Spacing cleanup, window sizing fix, background color fill fix.

--- a/src/connect4/resources/game.css
+++ b/src/connect4/resources/game.css
@@ -9,10 +9,9 @@ and open the template in the editor.
 */
 .game-grid {
     -fx-background-color: gray ;
-    -fx-padding: 50 ;
-    -fx-alignment: center ;
-    -fx-hgap: 50 ;
-    -fx-vgap: 50 ;
+    -fx-padding: 40 ;
+    -fx-hgap: 25 ;
+    -fx-vgap: 25 ;
 }
 .game-grid-cell {
     -fx-background-color: black ;
